--- a/angular-src/src/app/components/home/home.component.html
+++ b/angular-src/src/app/components/home/home.component.html
@@ -1,22 +1,37 @@
 <div class="jumbotron text-center">
-  <h1>When Nothing Works 2.0</h1>
-  <p class="lead">Welcome to When Nothing Works 2.0 application </p>
+  <h1>Add new post</h1>
   <div>
-    <a class="btn btn-primary" [routerLink]="['/register']">Register</a> <a class="btn btn-dark" [routerLink]="['/login']">Login</a>
+    <form class="form-posting" (submit)="onPostSubmit()">
+      <div class="form-group">
+        <input type="text"
+          class="form-control mb-2"
+          maxlength="250"
+          placeholder="Enter your subject"
+          [(ngModel)]="subject" 
+          name="subject">
+        <textarea
+          class="form-control mb-2"
+          maxlength="250"
+          placeholder="Enter your post"
+          [(ngModel)]="post" 
+          name="post"
+        ></textarea>
+        <button class="btn btn-lg btn-primary" type="submit">Save</button>
+        <button class="btn btn-lg btn-primary" type="submit">Cancel</button>
+    
+      </div>
+    </form>
   </div>
 </div>
 
-<div class="row">
-  <div class="col-md-4">
-    <h3>Express Backend</h3>
-    <p>A rock solid Node.js/Express server using Mongoose to organize models and query the database</p>
-  </div>
-  <div class="col-md-4">
-    <h3>Angular-CLI</h3>
-    <p>Angular-CLI to generate components, services and more. Local dev server and easy compilation</p>
-  </div>
-  <div class="col-md-4">
-    <h3>JWT Tokens</h3>
-    <p>Full featured authentication using JSON web tokens. Login and store user data</p>
-  </div>
+<div>
+  <h2>Posts</h2>
+  <ul class="posts">
+    <li *ngFor="let post of posts">
+
+    </li>
+  </ul>
 </div>
+
+
+
