--- a/angular-src/src/app/components/home/home.component.html
+++ b/angular-src/src/app/components/home/home.component.html
@@ -17,7 +17,7 @@
           name="newPostContent"
         ></textarea>
         <button class="btn btn-lg btn-primary" [style.opacity]="authService.loggedIn() ? 1 : 0.5" type="submit">Save</button>
-        <button class="btn btn-lg btn-primary" [style.opacity]="authService.loggedIn() ? 1 : 0.5" type="submit">Cancel</button>
+        <button class="btn btn-lg btn-primary" [style.opacity]="authService.loggedIn() ? 1 : 0.5" type="reset">Cancel</button>
     
       </div>
     </form>
