--- a/angular-src/src/app/components/navbar/navbar.component.html
+++ b/angular-src/src/app/components/navbar/navbar.component.html
@@ -21,7 +21,8 @@
       <li class="nav-item" *ngIf="!authService.loggedIn()"  [routerLinkActive]="['active']" [routerLinkActiveOptions] = "{exact:true}">
         <a class="nav-link" [routerLink]="['/register']">Register</a>
       </li>
-      <li class="nav-item" *ngIf="authService.loggedIn()"  ><a class="nav-link" (click)="onLogoutClick()" href="#">Logout</a>
+      <li class="nav-item" *ngIf="authService.loggedIn()">
+        <a class="nav-link" (click)="onLogoutClick()" href="#">Logout</a>
       </li>
     </ul>
   </div>
