--- a/angular-src/src/app/components/home/home.component.css
+++ b/angular-src/src/app/components/home/home.component.css
@@ -23,3 +23,17 @@
     font-size: medium;
     margin-top: 5px;
   }
+
+  .post-footer{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    font-size: 24px;
+  }
+
+  .footer-icons{
+    margin-right: 5px;
+    align-items: flex-start;
+  }
+
+ 
