Like/Thumbs up working

--- a/angular-src/src/app/components/comment/comment.component.css
+++ b/angular-src/src/app/components/comment/comment.component.css
@@ -37,3 +37,9 @@
     font-size: medium;
     margin-top: 5px;
   }
+
+  .fa-thumbs-up {
+    font-size: 26px;
+    color: #494d51;
+    color: #848b91;
+  }
