--- a/angular-src/src/app/components/home/home.component.css
+++ b/angular-src/src/app/components/home/home.component.css
@@ -35,5 +35,10 @@
     margin-right: 5px;
     align-items: flex-start;
   }
+  .fa-thumbs-up {
+    font-size: 26px;
+    color: #494d51;
+    color: #848b91;
+  }
 
  
