--- a/angular-src/src/app/components/home/home.component.html
+++ b/angular-src/src/app/components/home/home.component.html
@@ -31,7 +31,8 @@
         <div class="post">
           <div class="post-header text-primary">
             <p class="subject">{{ post.subject }}</p>
-            <p class="username">{{ post.username }} | {{post.timestamp}}</p>
+            <p class="username" (click)="onViewProfile(post)"> 
+              {{ post.username }} | {{post.timestamp}}</p>
           </div>
           <p class="content text-primary">{{ post.content }}</p>
           <div class="post-footer">
