Bio update, search function and footer done

--- a/angular-src/src/app/components/comment/comment.component.css
+++ b/angular-src/src/app/components/comment/comment.component.css
@@ -30,7 +30,7 @@
   }
   
   .username {
-    font-size: small;
+    font-size: medium;
   }
   
   .content {
@@ -40,6 +40,5 @@
 
   .fa-thumbs-up {
     font-size: 26px;
-    color: #494d51;
     color: #848b91;
   }
